<resources>
    <string name="app_name">Schedules Manager</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="mess_when_click_back_btn">Press again to exit</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="schedules">schedules</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="no_internet">No internet</string>
    <string name="detail">Detail</string>
    <string name="title">Title</string>
    <string name="add_new_task">Add new task</string>
    <string name="delete_success">Delete success</string>
    <string name="delete_error">Delete Error</string>
    <string name="name">Name:</string>
    <string name="birth_day">birth day:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">new password</string>
    <string name="repeat_password">repeat password</string>
    <string name="repeat_password_other_new_password">Repeat password need same new password</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_length">Password need than 6 word</string>
    <string name="password_only_alphabet">Password only is alphabet</string>
    <string name="wrong_password">Wrong password</string>
    <string name="change_password_success">Change password success</string>
    <string name="cannot_change_password">Cannot change password</string>
    <string name="detail_forgot_password">if you forgot your password, you can enter email, we will send a form to you to recover your password</string>
    <string name="recover_password">Recover password</string>
    <string name="recover_password_success">Please check your email</string>
    <string name="email">Email</string>
    <string name="detail_register">If you don\'t have account for note you can register an account</string>
    <string name="first_name_not_dot">First name</string>
    <string name="last_name_not_dot">Last name</string>
    <string name="email_need_at">Email need @</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_length">Email need than 6 word</string>
    <string name="email_only_alphabet">Email only alphabet</string>
    <string name="name_empty">Name be empty</string>
    <string name="name_length">Name cannot be empty</string>
    <string name="the_email_same">The email same</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="take_photo_by_camera">Take photo by camera</string>
    <string name="choose_image">Choose image</string>
    <string name="open_camera">Open camera</string>
    <string name="delete_image">Delete image</string>
    <string name="default_image">Default image</string>
    <string name="save">Save</string>
    <string name="choose_gallery">Choose gallery</string>
    <string name="unknown_error">Unknown error</string>
    <string name="great_than_current_date">Great than current date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_schedules">Search schedules</string>
    <string name="show_profile">Show profile</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="review_avatar">Review avatar</string>
    <string name="upload_avatar_success">Upload avatar success</string>
    <string name="waiting_login">Waiting login</string>
    <string name="cancel">Cancel</string>
    <string name="finish_by">Finish by</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="schedule_time">Schedule time</string>
    <string name="has_error_when_save_schedule">Has error when shave schedule</string>
    <string name="description_task">Description task</string>
    <string name="create_new_schedule">Create new schedule</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="create_task_success">Create task success</string>
    <string name="update_task_success">Update task success</string>
    <string name="delete_avatar_success">Delete avatar success</string>
    <string name="ok">OK</string>
    <string name="edit_profile">Edit profile</string>
    <string name="birthday_need_before_present_time">Birthday needs before the present time</string>
    <string name="cannot_edit_profile">Cannot edit profile</string>
    <string name="search_user">Search user</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="take_file_by_storage">Take file by storage</string>
    <string name="add_new_file">Add new file</string>
    <string name="start_download">Start download  %1$s</string>
    <string name="error_download">Error download</string>
</resources>