<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/image_choose"
        android:icon="@drawable/ic_image_gallery"
        android:title="@string/choose_image"
        app:iconTint="?attr/blackLightWhiteNightColor"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/take_photo"
        android:icon="@drawable/ic_photo_camera"
        android:title="@string/take_photo_by_camera"
        app:iconTint="?attr/blackLightWhiteNightColor"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/take_file"
        android:icon="@drawable/ic_files"
        android:title="@string/take_file_by_storage"
        app:iconTint="?attr/blackLightWhiteNightColor"
        app:showAsAction="collapseActionView" />
</menu>