<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="task"
            type="com.pnam.schedulemanager.model.database.domain.Task" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_rounded_background"
        android:paddingHorizontal="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/description_task"
            android:singleLine="true"
            android:text="@={task.detail}"
            android:paddingBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                app:cornerRadius="16dp"
                app:rippleColor="@color/yellow" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                app:cornerRadius="16dp"
                app:rippleColor="@color/yellow" />
        </LinearLayout>
    </LinearLayout>
</layout>