<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/greyColor"
            app:boxStrokeColor="@color/box_stroke_color"
            app:hintTextColor="@color/color_background_gray_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor" >
                <requestFocus/>
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/greyColor"
            app:boxStrokeColor="@color/box_stroke_color"
            app:hintTextColor="@color/color_background_gray_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/greyColor"
            app:boxStrokeColor="@color/box_stroke_color"
            app:hintTextColor="@color/color_background_gray_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/change_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cannot_change_password"
            android:textColor="#FF0000"
            android:layout_margin="16dp"
            android:visibility="invisible"
            android:gravity="center"/>

        <Button
            android:id="@+id/change_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/change_password"
            android:textAllCaps="false" />
    </LinearLayout>
</layout>