<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.pnam.schedulemanager.model.database.domain.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:boxStrokeColor="@color/box_stroke_color"
                    app:hintTextColor="@color/color_background_gray_yellow"
                    app:passwordToggleTint="?attr/greyColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_not_dot"
                        android:inputType="text|textCapSentences"
                        android:singleLine="true"
                        android:text="@={user.firstName}"
                        android:textCursorDrawable="@drawable/color_cursor">

                        <requestFocus />
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:boxStrokeColor="@color/box_stroke_color"
                    app:hintTextColor="@color/color_background_gray_yellow"
                    app:passwordToggleTint="?attr/greyColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_not_dot"
                        android:inputType="text|textCapSentences"
                        android:singleLine="true"
                        android:text="@={user.lastName}"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:gravity="center|start"
                            android:paddingStart="16dp"
                            android:singleLine="true"
                            android:text="@string/birth_day"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/birthday"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="7"
                                android:background="@android:color/transparent"
                                android:enabled="false"
                                android:gravity="center|start"
                                android:inputType="none"
                                android:text="@={user.birthdayString}"
                                android:textColor="?attr/blackLightWhiteNightColor"
                                android:textColorHighlight="?attr/greyColor"
                                android:textCursorDrawable="@drawable/cursor_background_white" />

                            <ImageButton
                                android:id="@+id/calendar_choose"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                app:backgroundTint="@android:color/transparent"
                                app:srcCompat="@drawable/ic_calendar"
                                app:tint="?attr/blackLightWhiteNightColor" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/error_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textColor="#FF0000"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:buttonTint="@color/color_checked"
                            android:checked="@={user.gender}"
                            android:text="@string/male" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:buttonTint="@color/color_checked"
                            android:text="@string/female" />
                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/error_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="#FF0000"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/edit_profile" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>